修缮warn，优化代码符合规范